themes/editorial/sass/custom.scss
/*
    Place custom styles here.
*/

ul.tabs{
    display: table-cell;
    padding: 0;
}
ul.tabs li{
    cursor: pointer;
    display: block;
    padding: 0 1.5rem;
    line-height: 3rem;
    float: left;
    transition: all 0.18s;
    background-color: _palette(fg-white);
    font-weight: bold;
    &:hover {
	    color: _palette(accent);
    }
}

ul.tabs li.current{
    box-shadow: inset 0 -5px 0 _palette(accent);
    color: _palette(accent);
}

.tab-content{
    display: none;
}

.tab-content.current{
    display: inherit;
}


/* plan */
table.plan tr {
    border: none;
}
table.plan td {
    padding: 0.25em 0.75em;
}
.plan--lichyDen {
    background-color: _palette(fg-white) !important;
}
.plan--sudyDen {
    background-color: inherit !important;
}
.event--program {
    font-weight: bold;
}

/****************
***** HOME ******
****************/
/* home - news */
.newsPictures {
    margin: 1em 0 0 0;
}
.newsIMG {
    padding-bottom: 30px;
}
.newsText {
    text-align: justify;
}
/* home - soon */
#soon {
    padding: 0 2.5rem;
    background-color: _palette(bg-alt-light);
    
    section {
            padding: 2.5rem;
            margin: 2.5rem;
        
        position: relative;
        left: 1rem;
        border: 1px dashed black;

        &.event {
            border: 1px solid black;
            background-color: white;
        }

        @include breakpoint(xlarge) {
            padding: 1.5rem;
            margin: 1.5rem;
        }            
    }
}

.soon--date {
    padding-top: 2.5rem;
}
#soon section > article > ul {
    margin: 0;
}


#soon a, #soon a:hover {
    text-decoration: none;
    color: _palette(bg-alt) !important;
}

.soon--dot {
    height: 16px;
    width: 16px;
    background-color: _palette(bg-alt-light);
    border-radius: 50%;
    display: inline-block;
    top: 3px;
    position: relative;
    border: solid;
  }
.soon--dot-now{
    background-color: _palette(bg-alt);
}
.soon--day {
    float: right;
    top: 3px;
    position: relative;
}

#soon--timeline {
    border: 2px _palette(bg-alt) solid;
    width: 0;
    height: calc(100% - 40px);
    float: left;
    left: 46px;
    margin-top: 56px;
    position: absolute;
}

/****************
**** Program ****
****************/
#program tr {
    border: none;
}
#filter_program {
    border: _palette(bg-alt) dashed 1px;
    margin-bottom: 2em;
}
#filter_program label.pure-radio {
    margin: 2px;
}
#filter_program fieldset {
    margin: 2.2em 1.1em;
}
tr.program--now {
    border: solid _palette(bg-alt) !important;
    border-width: 0.5em 0em !important;
    td {
        padding: 0;
    }
}


/* common */
.click-row {
    cursor: pointer;
    &:hover {
        background-color: _palette(accent);
    }
}





// NAV-LINKS


#nav-links {
    position: relative;
    width: calc(100% - 40em);
    float: right;
    white-space: nowrap;
		
	> ul {
		float: right;
        list-style: none;
		margin: 0;
		padding: 0;
		z-index: 5;
	}
	
	> ul > li {
		background: none;
        float: left;
        position: relative;
        padding: 0;
		
		&.hide {
			display: none;
		}
		
		&:hover {
            color: _palette(accent);
			
			ul {
				display: block;
			}
		}
    }
	
	a {
		color: _palette(bg-alt-light);
        text-decoration: none;
        font-family: Overpass;
        border-bottom: none;
        font-size: 1rem;
        padding: 0 1rem;
        display: inline-block;
        &:hover {
            color: _palette(accent); 
        }
	}
	
	ul ul {
		background: _palette(bg-alt-dark);
		display: none;
        list-style: none;
		padding: 0;
		position: fixed;
        right: 0;
        top: 3rem;
        
        li {
            padding: 0;
        }
		a {
            display: block;
            padding: 0 1rem;
        }
        
	}	
}
#links-more-btn {
    background-color: _palette(bg-alt-dark) !important;
    cursor: pointer;
    i {
        color: _palette(bg-alt-light);
        padding: 1rem;
        font-size: 1rem;
        position: relative;
        top: -2px;
    }
}
    
#links-more-ul {
    box-shadow: 0 3px 2px rgba(0,0,0,.2);
}

#program .backgroundAccent{
    background-color: _palette(accent);
}
#program td.view {
    padding: 0;
    text-align: center;
    a {
        border-bottom: none;
        padding: 0.75em 0.75em; 
        color: _palette(fg) !important;
    }
    &:hover {
        background-color: _palette(accent); 
    }
}
#program td.edit{
    padding: 0;
    a {
        border-bottom: none;
        display: block;
        padding: 0.75em 0.75em;
        color: _palette(fg) !important;
    }
}


@include breakpoint(large) {
    #sidebar, #nav-links {
        opacity: 0;
    }
}


ul.tabs li.group-icon {
    display: none;
}
@include breakpoint(medium) {
    ul.tabs li.group-icon {
        display: block;
    }
    ul.tabs li.group-text {
        display: none;
    }
}

@include breakpoint(medium) {
    ul.tabs {
        display: flex;
    }
    ul.tabs li{ 
        text-align: center;
        &.group-info {
            flex: 1;
        }
        &.group-plan {
            flex: 3;
        }
        &.group-icon {
            flex: 1;
        }
    }
}

.soon-deadline > .entry {
    border-top: 1px dashed;
    padding: 1em 0;
    &.last {
        padding-bottom: 0;
    }
}
.soon-deadline > .title {
    padding-bottom: 0.8em;
}

.logs-output {
    table.noflex {

        td.level .badge {
            &.error, &.critical, &.alert {
                background-color: #DC3023;
                color: #fff;
            }
            &.notice, &.warning {
                background-color: #E08A1E;
                color: #fff;
            }
            &.debug {
                background-color: #26A65B;
                color: #fff;
            }
            &.info {
                background-color: #22A7F0;
                color: #fff;
            }
            &.emergency {
                background-color: #8E44AD;
                color: #fff;
            }
        }
    }
}
.badge {
    display: inline-block;
    font-size: 0.8rem;
    font-weight: 500;
    border-radius: 10px;
    padding: 0px 6px;
    min-width: 20px;
    line-height: 20px;
    text-align: center;
}

/* commento */
#commento {
    .commento-button {
        color: white !important;
    }
    .commento-input:focus {
        box-shadow: none;
    }
    .commento-root textarea:focus {
        box-shadow: none;
    }
    .commento-option-button {
        box-shadow: none;
    }
    textarea:focus {
        box-shadow: none;
    }
    .commento-submit-button {
        background-color: _palette(accent);
    }

}

.comment-count {
    color: inherit;
    border-bottom: none;
}

#novinky hr {
    border-bottom: solid 2px _palette(bg-alt-dark);
}


#sidebar a.sneaky{
    color: #555;
    &:hover {
        color: _palette(accent);
    }
}

